// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationSnackbar displays correct notification for error type with correct message 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiGrid-root-7 MuiGrid-container-8 MuiGrid-align-items-xs-center-16"
    >
      <div
        class="MuiGrid-root-7 makeStyles-textContainer-2 MuiGrid-item-9"
      >
        <img
          alt="notification-icon"
          class="makeStyles-notificationIcon-3"
          src="assets/icons/notification-error-icon.svg"
        />
        <p
          class="MuiTypography-root-110 makeStyles-text-4 MuiTypography-body2-111"
        >
          This is an error message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationSnackbar displays correct notification for info type with correct message 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiGrid-root-7 MuiGrid-container-8 MuiGrid-align-items-xs-center-16"
    >
      <div
        class="MuiGrid-root-7 makeStyles-textContainer-2 MuiGrid-item-9"
      >
        <p
          class="MuiTypography-root-110 makeStyles-text-4 MuiTypography-body2-111"
        >
          This is an info message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationSnackbar displays correct notification for success type with correct message 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiGrid-root-7 MuiGrid-container-8 MuiGrid-align-items-xs-center-16"
    >
      <div
        class="MuiGrid-root-7 makeStyles-textContainer-2 MuiGrid-item-9"
      >
        <img
          alt="notification-icon"
          class="makeStyles-notificationIcon-3"
          src="assets/icons/notification-success-icon.svg"
        />
        <p
          class="MuiTypography-root-110 makeStyles-text-4 MuiTypography-body2-111"
        >
          This is a success message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationSnackbar displays correct notification for warning type with correct message 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiGrid-root-7 MuiGrid-container-8 MuiGrid-align-items-xs-center-16"
    >
      <div
        class="MuiGrid-root-7 makeStyles-textContainer-2 MuiGrid-item-9"
      >
        <img
          alt="notification-icon"
          class="makeStyles-notificationIcon-3"
          src="assets/icons/notification-warning-icon.svg"
        />
        <p
          class="MuiTypography-root-110 makeStyles-text-4 MuiTypography-body2-111"
        >
          This is a warning message
        </p>
      </div>
    </div>
  </div>
</div>
`;
